trunk/Archive2/2f/d0ac931dfa36d1/output
main.cpp:22:11: error: use 'template' keyword to treat 'foo' as a dependent template name
        a.foo<U, V>();
          ^
          template 
1 error generated.
